Fix javascript scrollbar position and layout

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -57,6 +57,7 @@ $comment-section-bg: #333;
     height: 100%;
 
     .title{
+        height: 52px;;
         padding: 10px 20px;
         font-size: 20px;
         background-color: rgba(190, 190, 190, 0.2);
@@ -69,7 +70,7 @@ $comment-section-bg: #333;
         h2{
             margin: 0 .5em 0 0;
             line-height: 1em;
-            
+
             i{ line-height: inherit; margin-right: 15px; }
         }
         i{
@@ -77,11 +78,15 @@ $comment-section-bg: #333;
         }
     }
     .content-wrapper {
-        
+        position: absolute;
+        top: 52px;
+        left: 0;
+        width: 100%;
+        bottom: 0;
     }
     .content {
         padding: 20px 10px;
-        height: 90%;
+        height: 100%;
     }
 }
 .l-report-section{
@@ -105,7 +110,7 @@ $comment-section-bg: #333;
     left: 50.7%;
     width: 70%;
     z-index: 9990;
-    
+
      &.ng-hide-remove {
         -webkit-animation: fadeInLeft .5s .2s alternate forwards;
         opacity: 0;
@@ -122,7 +127,7 @@ $comment-section-bg: #333;
     width: 70.5%;
     color: #666;
     background-color: $detail-section-bg;
-    
+
     .title{
         background-color: $detail-title-color;
     }
